--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -94,83 +94,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "YOLOv5  2021-7-2 torch 1.9.0+cu102 CUDA:0 (NVIDIA GeForce GTX 1650, 4096.0MB)\n",
-      "\n",
-      "Fusing layers... \n",
-      "C:\\Users\\25659\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\torch\\nn\\functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  ..\\c10/core/TensorImpl.h:1156.)\n",
-      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n",
-      "Model Summary: 224 layers, 7266973 parameters, 0 gradients\n",
-      "[NULL @ 000001fef34c31c0] non-existing SPS 0 referenced in buffering period\n",
-      "[h264 @ 000001fef34c4f00] non-existing SPS 0 referenced in buffering period\n",
-      "[h264 @ 000001ff8545ea80] non-existing SPS 0 referenced in buffering period\n",
-      "[h264 @ 000001fef355e1c0] error while decoding MB 37 31, bytestream -13\n",
-      "[h264 @ 000001ff85353400] error while decoding MB 19 1, bytestream -20\n",
-      "[h264 @ 000001ff85353400] error while decoding MB 33 35, bytestream -27\n",
-      "[h264 @ 000001fef34f6ac0] error while decoding MB 36 1, bytestream -13\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001B[34m\u001B[1mdetect: \u001B[0mweights=yolov5s.pt, source=http://ivi.bupt.edu.cn/hls/cctv1.m3u8, imgsz=640, conf_thres=0.6, iou_thres=0.45, max_det=1000, device=, view_img=False, save_txt=False, save_conf=False, save_crop=False, nosave=False, classes=None, agnostic_nms=False, augment=False, update=False, project=runs/detect, name=exp, exist_ok=False, line_thickness=3, hide_labels=False, hide_conf=False, half=False\n",
-      "1/1: http://ivi.bupt.edu.cn/hls/cctv1.m3u8...  success (inf frames 720x576 at 25.00 FPS)\n",
-      "\n",
-      "0: 512x640 1 person, Done. (0.678s)\n",
-      "0: 512x640 Done. (0.013s)\n",
-      "0: 512x640 1 person, Done. (0.025s)\n",
-      "0: 512x640 Done. (0.013s)\n",
-      "0: 512x640 Done. (0.015s)\n",
-      "0: 512x640 Done. (0.019s)\n",
-      "0: 512x640 Done. (0.017s)\n",
-      "0: 512x640 1 person, Done. (0.012s)\n",
-      "0: 512x640 1 person, Done. (0.015s)\n",
-      "0: 512x640 1 person, Done. (0.011s)\n",
-      "0: 512x640 1 person, Done. (0.016s)\n",
-      "0: 512x640 1 person, Done. (0.013s)\n",
-      "0: 512x640 1 person, Done. (0.012s)\n",
-      "0: 512x640 1 person, Done. (0.012s)\n",
-      "0: 512x640 1 person, Done. (0.018s)\n",
-      "0: 512x640 1 person, Done. (0.018s)\n",
-      "0: 512x640 1 person, Done. (0.018s)\n",
-      "0: 512x640 1 person, Done. (0.021s)\n",
-      "0: 512x640 1 person, Done. (0.023s)\n",
-      "0: 512x640 1 person, Done. (0.017s)\n",
-      "0: 512x640 Done. (0.011s)\n",
-      "0: 512x640 1 person, Done. (0.017s)\n",
-      "0: 512x640 Done. (0.012s)\n",
-      "0: 512x640 Done. (0.015s)\n",
-      "0: 512x640 Done. (0.014s)\n",
-      "0: 512x640 Done. (0.012s)\n",
-      "0: 512x640 Done. (0.015s)\n",
-      "0: 512x640 Done. (0.012s)\n",
-      "0: 512x640 1 person, Done. (0.019s)\n",
-      "0: 512x640 1 person, Done. (0.016s)\n",
-      "0: 512x640 1 person, Done. (0.012s)\n",
-      "0: 512x640 1 person, Done. (0.021s)\n",
-      "0: 512x640 1 person, Done. (0.012s)\n",
-      "0: 512x640 1 person, Done. (0.016s)\n",
-      "0: 512x640 1 person, Done. (0.016s)\n",
-      "0: 512x640 1 person, Done. (0.015s)\n",
-      "0: 512x640 1 person, Done. (0.015s)\n",
-      "0: 512x640 1 person, Done. (0.012s)\n",
-      "0: 512x640 1 person, Done. (0.018s)\n",
-      "0: 512x640 1 person, Done. (0.017s)\n",
-      "0: 512x640 1 person, Done. (0.013s)\n",
-      "0: 512x640 1 person, Done. (0.013s)\n",
-      "0: 512x640 1 person, Done. (0.012s)\n",
-      "0: 512x640 1 person, Done. (0.013s)\n",
-      "0: 512x640 1 person, Done. (0.013s)\n",
-      "0: 512x640 1 person, Done. (0.017s)\n",
-      "0: 512x640 1 person, Done. (0.018s)\n",
-      "0: 512x640 1 person, Done. (0.014s)\n",
-      "0: 512x640 1 person, Done. (0.019s)\n"
+      "Traceback (most recent call last):\n",
+      "  File \"detect.py\", line 224, in <module>\n",
+      "    opt = parse_opt()\n",
+      "  File \"detect.py\", line 191, in parse_opt\n",
+      "    parser.add_argument('--source', type=str, default='data/images', help='file/dir/URL/glob, 0 for webcam')\n",
+      "  File \"C:\\Users\\25659\\AppData\\Local\\Programs\\Python\\Python38\\lib\\argparse.py\", line 1386, in add_argument\n",
+      "    return self._add_action(action)\n",
+      "  File \"C:\\Users\\25659\\AppData\\Local\\Programs\\Python\\Python38\\lib\\argparse.py\", line 1749, in _add_action\n",
+      "    self._optionals._add_action(action)\n",
+      "  File \"C:\\Users\\25659\\AppData\\Local\\Programs\\Python\\Python38\\lib\\argparse.py\", line 1590, in _add_action\n",
+      "    action = super(_ArgumentGroup, self)._add_action(action)\n",
+      "  File \"C:\\Users\\25659\\AppData\\Local\\Programs\\Python\\Python38\\lib\\argparse.py\", line 1400, in _add_action\n",
+      "    self._check_conflict(action)\n",
+      "  File \"C:\\Users\\25659\\AppData\\Local\\Programs\\Python\\Python38\\lib\\argparse.py\", line 1539, in _check_conflict\n",
+      "    conflict_handler(action, confl_optionals)\n",
+      "  File \"C:\\Users\\25659\\AppData\\Local\\Programs\\Python\\Python38\\lib\\argparse.py\", line 1548, in _handle_conflict_error\n",
+      "    raise ArgumentError(action, message % conflict_string)\n",
+      "argparse.ArgumentError: argument --source: conflicting option string: --source\n"
      ]
     }
    ],
    "source": [
-    "!python detect.py --conf 0.6 --source http://ivi.bupt.edu.cn/hls/cctv1.m3u8\n",
-    "# !python detect.py --source 0\n",
+    "# !python detect.py --conf 0.6 --source http://ivi.bupt.edu.cn/hls/cctv1.m3u8\n",
+    "!python detect.py --source 0\n",
     "# !python detect.py --source yxhb.jpg"
    ]
   },
