--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -95,9 +95,9 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"detect.py\", line 224, in <module>\n",
+      "  File \"detect.py\", line 225, in <module>\n",
       "    opt = parse_opt()\n",
-      "  File \"detect.py\", line 191, in parse_opt\n",
+      "  File \"detect.py\", line 192, in parse_opt\n",
       "    parser.add_argument('--source', type=str, default='data/images', help='file/dir/URL/glob, 0 for webcam')\n",
       "  File \"C:\\Users\\25659\\AppData\\Local\\Programs\\Python\\Python38\\lib\\argparse.py\", line 1386, in add_argument\n",
       "    return self._add_action(action)\n",
@@ -116,9 +116,10 @@
     }
    ],
    "source": [
-    "# !python detect.py --conf 0.6 --source http://ivi.bupt.edu.cn/hls/cctv1.m3u8\n",
-    "!python detect.py --source 0\n",
-    "# !python detect.py --source yxhb.jpg"
+    "!python detect.py --conf 0.6 --source http://ivi.bupt.edu.cn/hls/cctv1.m3u8\n",
+    "# !python detect.py --source 0\n",
+    "# !python detect.py --source yxhb.jpg\n",
+    "# !python detect.py --source firedata666/test666/"
    ]
   },
   {
